--- a/index.css
+++ b/index.css
@@ -328,6 +328,8 @@ h1{
     animation: animate 4000ms linear;
 }
 
+
+
 .countdown .number:nth-child(1){
     animation-delay: 1000ms;
 }
@@ -340,6 +342,10 @@ h1{
     animation-delay: 3000ms;
 }
 
+.final-display{
+    animation: final-rotate 4000ms linear infinite;
+}
+
 @keyframes animate {
     0% {
       transform: rotateY(90deg);
@@ -349,6 +355,16 @@ h1{
       transform: rotateY(-90deg);
     }
   }
+
+@keyframes final-rotate{
+    0% {
+        transform: rotateY(90deg);
+      }
+      
+    100% {
+    transform: rotateY(-90deg);
+    }
+}
 
 
 
@@ -378,8 +394,7 @@ button{
     margin: auto;
 }
 
-#new-game{
-    
+#new-game{    
     top: 0;
     bottom: 0;
     display: flex;
